Create user details module to handle injecting frontend values

--- a/frontend/app/views/index.scala.html
+++ b/frontend/app/views/index.scala.html
@@ -30,7 +30,7 @@
     <div class="home-slice home-slice--epic tier-required u-cf">
         <div class="home-slice__inner u-cf">
             <div class="home-slice__headline-block">
-                <h1 class="home-slice__headline">Hello. Welcome back to Guardian Membership.</h1>
+                <h1 class="home-slice__headline">Hello <span class="js-user-firstName"></span>. Welcome back to Guardian Membership.</h1>
             </div>
             <div class="home-slice__copy-block">
                 <p class="home-slice__copy">Stay up-to-date with the latest news and developments from the membership community and watch highlights of Guardian Live events by visiting <a href="@(Config.guardianMembershipUrl)">theguardian.com/membership</a>.</p>
