Remove card image SVGs and replace them with 2x PNGs

--- a/frontend/assets/stylesheets/_head.common.scss
+++ b/frontend/assets/stylesheets/_head.common.scss
@@ -46,6 +46,7 @@
 @import 'components/icons';
 @import 'icons/icons-sprite';
 @import 'icons/icons-svg';
+@import 'icons/icons-cards';
 
 /* Nav
    ========================================================================== */
