--- a/frontend/app/views/fragments/form/cardDetail.scala.html
+++ b/frontend/app/views/fragments/form/cardDetail.scala.html
@@ -32,19 +32,19 @@
                             We accept
                         </li>
                         <li class="credit-card-container-list__item inline-list__item">
-                            <i class="credit-card credit-card--form-field-note icon-sprite icon-sprite-card-visa"></i>
+                            <i class="sprite-card sprite-card--smaller sprite-card--visa"></i>
                         </li>
                         <li class="credit-card-container-list__item inline-list__item">
-                            <i class="credit-card credit-card--form-field-note icon-sprite icon-sprite-card-mastercard"></i>
+                            <i class="sprite-card sprite-card--smaller sprite-card--mastercard"></i>
                         </li>
                         <li class="credit-card-container-list__item inline-list__item">
-                            <i class="credit-card credit-card--form-field-note icon-sprite icon-sprite-card-american-express"></i>
+                            <i class="sprite-card sprite-card--smaller sprite-card--american-express"></i>
                         </li>
                     </ul>
                 </div>
             </div>
             <div class="credit-card-container">
-                <i class="js-credit-card-image credit-card credit-card--input-representation icon-sprite icon-sprite-card-unknown"></i>
+                <i class="js-credit-card-image credit-card--input-representation sprite-card sprite-card--unknown"></i>
                 <input type="tel"
                        size="20"
                        data-stripe="number"
