--- a/frontend/app/views/event/list.scala.html
+++ b/frontend/app/views/event/list.scala.html
@@ -13,7 +13,7 @@
         </div>
     </section>
 
-    <section class="container--row-pattern event-blocks">
+    <section class="event-blocks">
 
         <div class="event-block">
             <div class="events-title-container">
