chnage body weight to event title

--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -55,9 +55,9 @@
 @main("Event Detail | " + event.name.text, pageInfo=pageInfo, containerPadding = false, isBrochure = true, htmlClass = "event") {
     <div class="event__content__header">
         <div class="event__content__container">
-            <div class="event__masthead">
+            <div class="event__masthead u-cf">
                 <div class="event__title section-header page-header">events</div>
-                <h1 class="event__name section-header page-header">@event.name.text</h1>
+                <h1 class="event__name">@event.name.text</h1>
             </div>
         </div>
     </div>
