--- a/frontend/app/views/fragments/tier/details.scala.html
+++ b/frontend/app/views/fragments/tier/details.scala.html
@@ -12,14 +12,16 @@
 <p class="package__description">@Benefits.details(currentTier).desc</p>
 @if(showBenefitDetails) {
     <div class="package__list-benefits">
-        @for(t <- Tier.values.toSeq.sorted){
+        @for((t, i) <- Tier.values.toSeq.sorted.zipWithIndex) {
             @if(t >= Tier.Friend & t <= currentTier){
-                <ul class="package__list-benefits-element">
-                    @for((header, body, icon) <- Benefits.details(t).list) {
-                        <li class="benefits-title"><i class="icon-sprite icon-sprite-@icon icon-sprite--small"></i>@header</li>
-                        @if(showBenefitCopy) {
-                            <li class="benefits-copy">@body</li>
-                        }
+                <ul class="package__list-benefits-element js-opt-benefit-level-@i">
+                    @for(((header, body, icon), index) <- Benefits.details(t).list.zipWithIndex) {
+                        <div class="js-opt-benefit-level-@i-item-@{index+1}">
+                            <li class="benefits-title"><i class="icon-sprite icon-sprite-@icon icon-sprite--small"></i>@header</li>
+                            @if(showBenefitCopy) {
+                                <li class="benefits-copy">@body</li>
+                            }
+                        </div>
                     }
                 </ul>
             }
