--- a/frontend/assets/stylesheets/layout/_layout.scss
+++ b/frontend/assets/stylesheets/layout/_layout.scss
@@ -84,6 +84,7 @@ body {
 // for the side-margins function
 // please duplicate your changes
 // this alignment is too perfect
+%page-container,
 .page-container {
     background-color: #ffffff;
     padding: 0 rem($gs-gutter / 2);
